syntax = "proto3";

package org.project_planton.provider.kubernetes.workload.kubernetestemporal.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetestemporal/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetestemporal/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//temporal-kubernetes
message KubernetesTemporal {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesTemporal'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesTemporalSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesTemporalStatus status = 5;
}

//temporal-kubernetes status.
message KubernetesTemporalStatus {
  //stack-outputs
  KubernetesTemporalStackOutputs outputs = 1;
}
